--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-cog3pbg21fec73d2pof0-a.oregon-postgres.render.com/database_render_patterns_dms_u5qd:5432/database_render_patterns_dms_u5qd
-spring.datasource.username= database_render_patterns_dms_u5qd_user
-spring.datasource.password= VDfjLJ315Oma9T0dhQ1fwZQe4nq7WY47
+spring.datasource.url=jdbc:postgresql://dpg-cog3pbg21fec73d2pof0-a.oregon-postgres.render.com:5432/database_render_patterns_dms_u5qd
+spring.datasource.username=database_render_patterns_dms_u5qd_user
+spring.datasource.password=VDfjLJ315Oma9T0dhQ1fwZQe4nq7WY47
 spring.datasource.driver-class-name=org.postgresql.Driver
